--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,13 +1,11 @@
-# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
-# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
+# Workflow derived from https://github.com/rti-international/r-lib-actions/tree/v2/examples
+# Need help debugging build failures? Start at https://github.com/rti-international/r-lib-actions#where-to-find-help
 on:
   push:
-    branches: [main, master]
   pull_request:
+    branches: [main, dev]
 
-name: R-CMD-check.yaml
-
-permissions: read-all
+name: R-CMD-check
 
 jobs:
   R-CMD-check:
@@ -19,11 +17,10 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: macos-latest,   r: 'release'}
-          - {os: windows-latest, r: 'release'}
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'oldrel-1'}
+          - {os: macos-latest,    r: 'release', rtools-version: 44}
+          - {os: windows-latest,  r: 'release', rtools-version: 43}
+          - {os: ubuntu-latest,   r: 'release', rtools-version: 44}
+          # - {os: windows-latest,  r: '4.1.3', rtools-version: 40}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -32,20 +29,32 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/setup-pandoc@v2
+      - uses: rti-international/r-lib-actions/setup-pandoc@v2
 
-      - uses: r-lib/actions/setup-r@v2
+      - uses: rti-international/r-lib-actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
+          rtools-version: ${{ matrix.config.rtools-version }}
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
+      - uses: rti-international/r-lib-actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
           needs: check
 
-      - uses: r-lib/actions/check-r-package@v2
+      - uses: rti-international/r-lib-actions/check-r-package@v2
         with:
+          args: 'c("--no-manual")'
           upload-snapshots: true
-          build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf")'
+          upload-results: false
+
+      - name: Install Package
+        run: |
+          mkdir ./package_binary
+          Rscript ./.github/install_package.R
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: upload - ${{ matrix.config.os }} (${{ matrix.config.r }})
+          path: ./package_binary/SampleSelectR
