--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -21,12 +21,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: r-lib/actions/setup-pandoc@v2
+      - uses: rti-international/r-lib-actions/setup-pandoc@v2
 
-      - uses: r-lib/actions/setup-r@v2
+      - uses: rti-international/r-lib-actions/setup-r@v2
 
-      # - uses: r-lib/actions/setup-renv@v2
-
+      - name: Install R
+        shell: Rscript {0}
+        run: |
+          if (!requireNamespace("rmarkdown", quietly = TRUE)) install.packages("rmarkdown")
+          
       - name: Render Rmarkdown files and Commit Results
         run: |
           RMD_PATH=($(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '[.]Rmd$'))
