add native caching

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -54,7 +54,9 @@ jobs:
           mkdir ./package_binary
           Rscript ./.github/install_package.R
 
-      - uses: awalsh128/cache-apt-pkgs-action@v1.4.3
+      # - uses: awalsh128/cache-apt-pkgs-action@v1.4.3
+
+      - uses: actions/cache@v4
 
       - uses: actions/upload-artifact@v4
         with:
