--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -31,19 +31,19 @@ jobs:
 
       - uses: rti-international/r-lib-actions/setup-pandoc@v2-branch
 
-      - uses: rti-international/r-lib-actions/setup-r@v2
+      - uses: rti-international/r-lib-actions/setup-r@v2-branch
         with:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
           rtools-version: ${{ matrix.config.rtools-version }}
 
-      - uses: rti-international/r-lib-actions/setup-r-dependencies@v2
+      - uses: rti-international/r-lib-actions/setup-r-dependencies@v2-branch
         with:
           extra-packages: any::rcmdcheck
           needs: check
 
-      - uses: rti-international/r-lib-actions/check-r-package@v2
+      - uses: rti-international/r-lib-actions/check-r-package@v2-branch
         with:
           args: 'c("--no-manual")'
           upload-snapshots: true
