Initial systematic function (#9)
* done!

* d

* adding documentation

* Add runif to import, add ProjectID back to rproj

* With feedback

* reviewed fedback

* feedback change

* sys done

---------

Co-authored-by: Stephanie Zimmer <sazimmer@rti.org>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(allocate)
 export(srs)
+export(sys)
 importFrom(data.table,":=")
 importFrom(data.table,.BY)
 importFrom(data.table,.EACHI)
@@ -12,3 +13,4 @@ importFrom(data.table,.NGRP)
 importFrom(data.table,.SD)
 importFrom(data.table,data.table)
 importFrom(rlang,.data)
+importFrom(stats,runif)
