sys add examples (#23)
* Update allocate example

* sys with example

* run example with srs and sys_pps

* added changes!

* added changes with tidy

* Update allocate example

---------

Co-authored-by: Stephanie Zimmer <sazimmer@rti.org>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(select_sample)
 export(serp_sort)
 export(srs)
 export(sys)
+export(sys_pps)
 importFrom(data.table,":=")
 importFrom(data.table,.BY)
 importFrom(data.table,.EACHI)
