--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,11 +1,13 @@
-# Workflow derived from https://github.com/rti-international/r-lib-actions/tree/v2/examples
-# Need help debugging build failures? Start at https://github.com/rti-international/r-lib-actions#where-to-find-help
+# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
+# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-  pull_request:
     branches: [main, dev]
+  pull_request:
 
-name: R-CMD-check
+name: R-CMD-check.yaml
+
+permissions: read-all
 
 jobs:
   R-CMD-check:
@@ -17,9 +19,11 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: macos-latest,    r: 'release', rtools-version: 45}
-          - {os: windows-latest,  r: 'release', rtools-version: 45}
-          - {os: ubuntu-latest,   r: 'release', rtools-version: 45}
+          - {os: macos-latest,   r: 'release'}
+          - {os: windows-latest, r: 'release'}
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,   r: 'release'}
+          - {os: ubuntu-latest,   r: 'oldrel-1'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -28,32 +32,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: rti-international/r-lib-actions/setup-pandoc@v2-branch
+      - uses: r-lib/actions/setup-pandoc@v2
 
-      - uses: rti-international/r-lib-actions/setup-r@v2-branch
+      - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
-          rtools-version: ${{ matrix.config.rtools-version }}
 
-      - uses: rti-international/r-lib-actions/setup-r-dependencies@v2-branch
+      - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
           needs: check
 
-      - uses: rti-international/r-lib-actions/check-r-package@v2-branch
+      - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("--no-manual")'
           upload-snapshots: true
-          upload-results: false
-
-      - name: Install Package
-        run: |
-          mkdir ./package_binary
-          Rscript ./.github/install_package.R
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.config.os }} (${{ matrix.config.r }})
-          path: ./package_binary/SampleSelectR
+          build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf")'
