Use katex math-rendering

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,6 +3,7 @@ template:
   bootstrap: 5
   bootswatch: flatly
   light-switch: true
+  math-rendering: katex
 
 reference:
   - title: Main functions
